--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "xiejianwei",
   "version": "1.0.0",
-  "description": "vue2模板搭建",
+  "description": "新家生活ipad管家下单vue版",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.dev.js",
-    "prd": "set publish_env=production && webpack --config webpack.config.prd.js",
-    "beta": "set publish_env=beta && webpack --config webpack.prd.js",
-    "dev": "set publish_env=dev && webpack --config webpack.prd.js",
-    "start": "concurrently --kill-others \"npm run build & webpack-dev-server --host localhost --port 8089 --inline --hot --config webpack.config.dev.js --content-base dev/\""
+    "build": "node build/build.js",
+    "dev": "node build/dev-server.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,27 +17,39 @@
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-2": "^6.18.0",
     "babel-runtime": "^6.11.6",
     "clean-webpack-plugin": "^0.1.14",
+    "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.0",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.4",
     "html-res-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.24.1",
+    "http-proxy-middleware": "^0.17.2",
     "moment": "^2.16.0",
+    "opn": "^4.0.2",
+    "ora": "^0.3.0",
     "postcss-loader": "^1.1.1",
     "sass-loader": "^4.0.2",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.5",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^2.0.6",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^10.0.0",
+    "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.1.0",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.4",
-    "webpack-dev-server": "^1.16.1"
+    "webpack-dev-server": "^1.16.1",
+    "webpack-hot-middleware": "^2.13.2",
+    "webpack-merge": "^0.17.0"
   },
   "dependencies": {
     "axios": "^0.15.2",
@@ -51,5 +60,9 @@
     "vue-validator": "^3.0.0-alpha.1",
     "vuex": "^2.0.0",
     "vuex-router-sync": "^3.0.0"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
   }
 }
